# angr-api-mcp

./: .gitignore  README.md  pyproject.toml
src/angr_api_mcp/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  server.py
src/angr_api_mcp/collector/: angr_source.py
src/angr_api_mcp/extractor/: call_chain.py  models.py
src/angr_api_mcp/indexer/: search.py  store.py
src/angr_api_mcp/parser/: python_parser.py
tests/: test_extractor.py  test_indexer.py  test_parser.py  test_server.py
tests/fixtures/: basic_cfg.py  state_manipulation.py  symbolic_exec.py
